error.txt
Traceback (most recent call last):
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\manage.py", line 22, in <module>
    main()
    ~~~~^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\manage.py", line 18, in main
    execute_from_command_line(sys.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\__init__.py", line 443, in execute_from_command_line
    utility.execute()
    ~~~~~~~~~~~~~~~^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\__init__.py", line 437, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\base.py", line 416, in run_from_argv
    self.execute(*args, **cmd_options)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\base.py", line 460, in execute
    output = self.handle(*args, **options)
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\commands\check.py", line 81, in handle
    self.check(
    ~~~~~~~~~~^
        app_configs=app_configs,
        ^^^^^^^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
        databases=options["databases"],
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\management\base.py", line 492, in check
    all_issues = checks.run_checks(
        app_configs=app_configs,
    ...<2 lines>...
        databases=databases,
    )
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\checks\registry.py", line 89, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\checks\urls.py", line 16, in check_url_config
    return check_resolver(resolver)
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\core\checks\urls.py", line 26, in check_resolver
    return check_method()
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\urls\resolvers.py", line 541, in check
    for pattern in self.url_patterns:
                   ^^^^^^^^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\utils\functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ~~~~~~~~~^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\urls\resolvers.py", line 729, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
                       ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\utils\functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ~~~~~~~~~^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\urls\resolvers.py", line 722, in urlconf_module
    return import_module(self.urlconf_name)
  File "C:\Python314\Lib\importlib\__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1398, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 762, in exec_module
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\platforme_educatif\urls.py", line 7, in <module>
    path("api/auth/", include("accounts.urls")),
                      ~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\venv\Lib\site-packages\django\urls\conf.py", line 39, in include
    urlconf_module = import_module(urlconf_module)
  File "C:\Python314\Lib\importlib\__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1398, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 758, in exec_module
  File "<frozen importlib._bootstrap_external>", line 896, in get_code
  File "<frozen importlib._bootstrap_external>", line 826, in source_to_code
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "C:\Users\HIGH TECH\Desktop\mini platforme educatif\platforme_educatif\accounts\urls.py", line 6
    RegisterStudentView,
IndentationError: unexpected indent
